--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                     </a>
                 </div>      
                 <ul id="nav-list-links">
-                    <li id="main">Главная</li>
-                    <li id="service">Service</li>
-                    <li id="feature">Feature</li>
-                    <li id="products">Продукт</li>
-                    <li id="testimonial">Testimonial</li>
-                    <li id="gaq">FAQ</li>
+                    <li id="main"><a href="#">Главная</a></li>
+                    <li id="service"><a href="">Service</a></li>
+                    <li id="feature"><a href="">Feature</a></li>
+                    <li id="products"><a href="">Продукт</a></li>
+                    <li id="testimonial"><a href="">Testimonial</a></li>
+                    <li id="gaq"><a href="">FAQ</a></li>
                 </ul>
                 <div class="btn-nav-box">
                     <button class="btn-base-size btn-clear">Login</button>
@@ -30,6 +30,7 @@
     </header>
     <main>
         <section class="main-g-padding banner-section"  id="first-section">
+        <!-- Баннеры слайдера -->
             <article>
                 <div class="content-banner slide-1 hidden-slide" id="slide-1">
                     <div>
