Добавлена вторая секция (без картинок)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <br>
                             <span>from 8 years</span>
                         </h1>
-                        <p class="small-text-banner">Where to grow your business as a photographer: site or social media?</p>
+                        <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
                         <button class="btn-green btn-base-size">Register</button>
                     </div>
                     <div><img src="images/Illustration.svg" alt="Человек смотрит на код в компьютере"></div>
@@ -73,6 +73,21 @@
                     <div class="circle-banner-btn" id="btn-slide-3"></div>
                 </div>
             </div>
+        </section>
+        <section id="second-section">
+            <p class="section-title">Our Clients</p>
+            <p class="small-gray-text" style="text-align: center">We have been working with some Fortune 500+ clients</p>
+            <div class="row-imgs">
+                <img src="" alt="1">
+                <img src="" alt="2">
+                <img src="" alt="3">
+                <img src="" alt="4">
+                <img src="" alt="5">
+                <img src="" alt="6">
+            </div>
+        </section>
+        <section id="section-3">
+
         </section>
     </main>
     <footer>
