--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <br>
                             <span>from 8 years</span>
                         </h1>
-                        <p class="small-text-banner">Where to grow your business as a photographer: site or social media?</p>
+                        <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
                         <button class="btn-green btn-base-size">Register</button>
                     </div>
                     <div><img src="images/Illustration.svg" alt="Человек смотрит на код в компьютере"></div>
@@ -49,7 +49,7 @@
                             <br>
                             <span>from 8 years</span>
                         </h1>
-                        <p class="small-text-banner">Where to grow your business as a photographer: site or social media?</p>
+                        <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
                         <button class="btn-green btn-base-size">Register</button>
                     </div>
                     <div><img src="images/Illustration.svg" alt="Человек смотрит на код в компьютере"></div>
