--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="main-g-padding banner-section"  id="first-section">
         <!-- Баннеры слайдера -->
             <article>
-                <div class="content-banner slide-1 hidden-slide" id="slide-1">
+                <div class="content-banner slide-1" id="slide-1">
                     <div>
                         <h1>Lessons and insights 1
                             <br>
@@ -75,8 +75,10 @@
             </div>
         </section>
         <section id="second-section">
-            <p class="section-title">Our Clients</p>
-            <p class="small-gray-text" style="text-align: center">We have been working with some Fortune 500+ clients</p>
+            <h2 class="section-title">Our Clients</h2>
+            <div class="box-title-section">
+                <p class="small-gray-text">We have been working with some Fortune 500+ clients</p>
+            </div>
             <div class="row-imgs">
                 <img src="" alt="1">
                 <img src="" alt="2">
@@ -87,7 +89,17 @@
             </div>
         </section>
         <section id="section-3">
-
+            <div class="box-title-section">
+                <h3 class="section-title" style="width: 50%;">Manage your entire community in a single system</h3>
+            </div>
+            <div class="box-title-section">
+                <p class="small-gray-text" >Who is Nextcent suitable for?</p>
+            </div>
+            <div class="">
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+            </div>
         </section>
     </main>
     <footer>
