--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
     <header class="main-header">
-            <nav>
-                <div class="">
-                    <a href="/">
-                        <img src="./images/Logo.jpg" alt="Логотип компании">
-                    </a>
-                </div>      
-                <ul id="nav-list-links">
-                    <li id="main"><a href="#">Главная</a></li>
-                    <li id="service"><a href="">Service</a></li>
-                    <li id="feature"><a href="">Feature</a></li>
-                    <li id="products"><a href="">Продукт</a></li>
-                    <li id="testimonial"><a href="">Testimonial</a></li>
-                    <li id="gaq"><a href="">FAQ</a></li>
-                </ul>
-                <div class="btn-nav-box">
-                    <button class="btn-base-size btn-clear">Login</button>
-                    <button class="btn-base-size btn-green">Sign up</button>
-                </div>
-            </nav>
+        <nav>
+            <div class="">
+                <a href="/">
+                    <img src="./images/Logo.jpg" alt="Логотип компании">
+                </a>
+            </div>
+            <ul id="nav-list-links">
+                <li id="main"><a href="#">Главная</a></li>
+                <li id="service"><a href="">Service</a></li>
+                <li id="feature"><a href="">Feature</a></li>
+                <li id="products"><a href="">Продукт</a></li>
+                <li id="testimonial"><a href="">Testimonial</a></li>
+                <li id="gaq"><a href="">FAQ</a></li>
+            </ul>
+            <div class="btn-nav-box">
+                <button class="btn-base-size btn-clear">Login</button>
+                <button class="btn-base-size btn-green">Sign up</button>
+            </div>
+        </nav>
     </header>
     <main>
         <section class="main-g-padding banner-section"  id="first-section">
@@ -95,11 +95,93 @@
             <div class="box-title-section">
                 <p class="small-gray-text" >Who is Nextcent suitable for?</p>
             </div>
-            <div class="">
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
+            <div class="d-flex">
+                <div class="card-manage">
+                    <img src="" alt="7">
+                    <p>Membership Organisations</p>
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+                <div class="card-manage">
+                    <img src="" alt="8">
+                    <p>National Associations</p>
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
+                <div class="card-manage">
+                    <img src="" alt="9">
+                    <p>Clubs And Groups</p>
+                    <p>Our membership management software provides full automation of membership renewals and payments</p>
+                </div>
             </div>
+        </section>
+        <section id="section-4">
+            <article>
+                <div class="">
+                    <img src="" alt="img section 4">
+                </div>
+                <div class="">
+                    <h4>
+                        The unseen of spending three years at Pixelgrade
+                    </h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+                    <button>Learn More</button>
+                </div>
+            </article>
+        </section>
+        <section id="section-5">
+            <article class="d-flex">
+                <div class="">
+                    <h5>Helping a local <p>business reinvent itself</p> </h5>
+                    <p>We reached here with our hard work and dedication</p>
+                </div>
+                <div class="d-flex">
+                    <div class="">
+                        <div class="">
+                            <img src="" alt="">
+                            <div class="">
+                                <p>1</p>
+                                <p>2</p>
+                            </div>
+                        </div>
+                        <div class="">
+                            <img src="" alt="">
+                            <div class="">
+                                <p>3</p>
+                                <p>4</p>
+                            </div>
+                        </div>
+                    </div>
+                   <div class="">
+                       <div class="">
+                           <img src="" alt="">
+                           <div class="">
+                               <p>5</p>
+                               <p>6</p>
+                           </div>
+                       </div>
+                       <div class="">
+                           <img src="" alt="">
+                           <div class="">
+                               <p>7</p>
+                               <p>8</p>
+                           </div>
+                       </div>
+                   </div>
+                </div>
+            </article>
+        </section>
+        <section id="section-6">
+            <article>
+                <div class="">
+                    <img src="" alt="img section 4">
+                </div>
+                <div class="">
+                    <h4>
+                        The unseen of spending three years at Pixelgrade
+                    </h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis tristique iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec elementum pulvinar odio.</p>
+                    <button>Learn More</button>
+                </div>
+            </article>
         </section>
     </main>
     <footer>
