Изменение слайдера (кружки снизу)

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
             <article>
                 <div class="content-banner slide-1" id="slide-1">
                     <div>
-                        <h1>Lessons and insights 1
+                        <h1>Откройте мир кода:
                             <br>
-                            <span>from 8 years</span>
+                            <span>Погружение в программирование с нуля</span>
                         </h1>
-                        <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
+                        <p class="small-gray-text">Хочешь вырасти в программировании?</p>
                         <button class="btn-green btn-base-size">Register</button>
                     </div>
                     <div><img src="images/Illustration.svg" alt="Человек смотрит на код в компьютере"></div>
                 </div>
                 <div class="content-banner slide-2 hidden-slide" id="slide-2">
                     <div>
-                        <h1>Lessons and insights 2
+                        <h1>Искусство программирования:
                             <br>
-                            <span>from 8 years</span>
+                            <span>Ваш путь к технологическому мастерству</span>
                         </h1>
                         <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
                         <button class="btn-green btn-base-size">Register</button>
@@ -56,9 +56,9 @@
                 </div>
                 <div class="content-banner slide-3 hidden-slide" id="slide-3">
                     <div>
-                        <h1>Lessons and insights 3
+                        <h1>Программируйте свое будущее:
                             <br>
-                            <span>from 8 years</span>
+                            <span>Учебные курсы для начинающих и профессионалов</span>
                         </h1>
                         <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
                         <button class="btn-green btn-base-size">Register</button>
