Добавление новых картинок в слайдер

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <p class="small-gray-text">Хочешь вырасти в программировании?</p>
                         <button class="btn-green btn-base-size">Register</button>
                     </div>
-                    <div><img src="images/Illustration.svg" alt="Человек смотрит на код в компьютере"></div>
+                    <div><img src="images/boy_1.png" alt="Человек смотрит на код в компьютере"></div>
                 </div>
                 <div class="content-banner slide-2 hidden-slide" id="slide-2">
                     <div>
@@ -49,10 +49,10 @@
                             <br>
                             <span>Ваш путь к технологическому мастерству</span>
                         </h1>
-                        <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
+                        <p class="small-gray-text">Хочешь вырасти в программировании?</p>
                         <button class="btn-green btn-base-size">Register</button>
                     </div>
-                    <div><img src="images/Illustration.svg" alt="Человек смотрит на код в компьютере"></div>
+                    <div><img src="images/boy_2.png" alt="Человек смотрит на код в компьютере"></div>
                 </div>
                 <div class="content-banner slide-3 hidden-slide" id="slide-3">
                     <div>
@@ -60,10 +60,10 @@
                             <br>
                             <span>Учебные курсы для начинающих и профессионалов</span>
                         </h1>
-                        <p class="small-gray-text">Where to grow your business as a photographer: site or social media?</p>
+                        <p class="small-gray-text">Хочешь вырасти в программировании?</p>
                         <button class="btn-green btn-base-size">Register</button>
                     </div>
-                    <div><img src="images/Illustration.svg" alt="Человек смотрит на код в компьютере"></div>
+                    <div><img src="images/girl_3.png" alt="Человек смотрит на код в компьютере"></div>
                 </div>
             </article>
             <div class="box-btns">
